<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".about.AboutActivity"
    android:id="@+id/rootView"
    >

    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        >

        <ImageButton
            android:id="@+id/BackBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/back"
            android:background="@drawable/ripple_background"
            android:onClick="Back"
            android:src="@drawable/ic_back"

            android:text="@string/back" />

        <TextView
            android:id="@+id/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/about"
            android:textStyle="bold"
            android:textColor="?colorOnBackground"
            android:textSize="30sp" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedList"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topBar"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"

        >
        <RelativeLayout
            android:id="@+id/scrollRL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:id="@+id/logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true" />

            <LinearLayout
                android:id="@+id/newVersionAvailable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:background="@drawable/dialog_background"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical"
                android:visibility="gone"
                >

                <TextView
                    android:id="@+id/newVersionAvailableTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="20dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/new_version_available"
                    android:layout_gravity="center"
                    android:textAlignment="center"

                    />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/newVersionAvailable"
                >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/aboutList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"

                    android:layout_marginTop="10dp" />



                <TextView
                    android:id="@+id/LibrariesTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/aboutList"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:textColor="?colorOnSurfaceVariant"
                    android:layout_marginBottom="5dp"
                    android:text="@string/open_source_libraries"
                    android:textSize="25sp" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/LibrariesList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/LibrariesTxt"
                    android:layout_centerHorizontal="true"

                    />

            </RelativeLayout>

            <Button
                android:id="@+id/updateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/list"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:onClick="CheckForUpdate"
                android:text="@string/check_for_update"
                android:visibility="gone"
                />


        </RelativeLayout>



    </androidx.core.widget.NestedScrollView>
</RelativeLayout>